# glow

./: .gitmodules  CMakeLists.txt  README.md
.circleci/: build.sh
basic_llvm_test/: CMakeLists.txt  asm_output.txt  basic_llvm_test.cc  output.txt
cmake/modules/: GlowDefaults.cmake
include/glow/Base/: Tensor.h
lib/Backends/Example/: CMakeLists.txt
tests/unittests/: CMakeLists.txt  FollyTest.cpp
